--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
     "type-check": "tsc --noEmit",
     "clean": "rm -rf .next out",
     "analyze": "cross-env ANALYZE=true next build",
-    "test": "echo \"Tests not configured yet\" && exit 1"
+    "test": "echo \"Tests not configured yet\" && exit 1",
+    "db:seed": "ts-node prisma/seed.ts",
+    "db:reset": "npx prisma migrate reset --force",
+    "db:studio": "npx prisma studio"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.16.3",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.18",
     "next": "15.5.3",
     "next-seo": "^6.8.0",
+    "prisma": "^6.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
@@ -40,6 +48,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
